# lograder

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  frob.toml  main.py  make.bat  mypy-py310.ini  mypy-py314.ini  pyproject.toml  requirements.txt  run_autograder  setup.sh  tickets.md
.github/workflows/: ci.yml
design/: lograder.strata
docs/: concepts.md  examples.md  getting-started.md  index.md  output.md  pipeline.md  process.md  quickstart.md  scoring.md  steps.md
docs/examples/: cmake-autograder.md  custom-step.md  makefile-autograder.md  python-autograder.md
docs/pipeline/: build.md  check.md  input.md  metadata.md  scoring.md  test.md
lograder/: __init__.py  _core_exceptions.py  constants.py  exceptions.py
lograder/io/: __init__.py  _core_exceptions.py  exceptions.py  file_operations.py  grade.py  leaderboard.py
lograder/io/parser/: cmake.py
lograder/io/tests/: __init__.py  _core_exceptions.py  cpp.py  exceptions.py  interface.py
lograder/output/raw_json/: assignment.py  leaderboard.py  test_case.py
lograder/output/string/: loggers.py
lograder/tests/: __init__.py  _core_exceptions.py  exceptions.py
lograder/tests/common/: __init__.py  exceptions.py  types.py  validation.py
lograder/tests/file/: __init__.py  test_maker.py
lograder/tests/generator/: __init__.py  test_maker.py  types.py
lograder/tests/registry/: __init__.py  registry.py
lograder/tests/simple/: __init__.py  test_maker.py
lograder/tests/template/: __init__.py  test_maker.py  types.py
lograder/tests/test/: __init__.py  interface.py  io_comparison_test.py
scripts/: bump_version.py
src/lograder/: __init__.py  _build_test.py  _core_exceptions.py  constants.py  exception.py  exceptions.py  random_utils.py  types.py
src/lograder/builder/: __init__.py  _core_exceptions.py  constants.py  exceptions.py
src/lograder/common/: __init__.py  empty.py  generic_utils.py  result.py  types.py  utils.py
src/lograder/data/: build.py  cxx.py  messages.py  paths.py  penalties.py
src/lograder/dispatch/: __init__.py  _core_exceptions.py  exceptions.py
src/lograder/grader/: file_utils.py  logger.py  metadata.py  submission_handler.py
src/lograder/graph/: config.py  graph.py  input.py  output.py  step.py
src/lograder/os/: cmd.py  file.py
src/lograder/output/: __init__.py  capture.py  config.toml  filters.py  formatters.py  gradescope.py  handlers.py  logger.py  packets.py
src/lograder/pipeline/: block.py  config.py  conversion.py  input.py  metadata.py  package.py  pipeline.py  score.py  step.py
src/lograder/process/: __init__.py  cli_args.py  executable.py  install_script.py  os_helpers.py
src/lograder/static/: __init__.py  basicconfig.py  messageconfig.py  messages.py
src/lograder/tests/: __init__.py  _core_exceptions.py  exceptions.py
stubs/: _strenum_compat.pyi  tomllib.pyi
tests/: conftest.py  test_build.py  test_builder.py  test_catch2.py  test_cmake_comparison.py  test_cpp_comparison.py  test_design_model.py  test_tests.py  test_valgrind.py  testing_utils.py
tests/common/: test_empty.py  test_result.py  test_type_bindings.py
tests/integration/: conftest.py  test_cmake_pipeline.py  test_gradescope_output.py  test_gxx_pipeline.py  test_mixin_pipeline.py  test_pipeline_flow.py
tests/lograder_test/: codegen.py
tests/output/impl/: test_junit_step_layouts.py  test_manifest_format_helpers.py  test_project_manifest_check.py  test_project_manifest_layouts.py  test_project_simple_project_layouts.py  test_project_simple_project_tests.py
tests/output/meta/: conftest.py  test_config_integration.py  test_filters.py  test_formatters.py  test_handlers.py  test_layout_core.py  test_layout_dynamic.py  test_logger.py  test_packets.py
tests/parsers/: _valgrind_integration_helpers.py  test_junit_parser.py  test_nm_parser.py  test_valgrind_parser_integration.py  test_valgrind_parser_unit.py
tests/pipeline/: test_asan.py  test_build.py  test_catch2.py  test_compile_check.py  test_complexity.py  test_config.py  test_ctest_step.py  test_gtest_step.py  test_gxx_build.py  test_manifest.py  test_metadata.py  test_mixin.py  test_mypy_check.py  test_oracle_and_differential.py  test_output_compare.py  test_pytest_step.py  test_python_annotation_check.py  test_raw_source_check.py  test_score.py  test_source_check.py  test_step.py  test_ty_check.py
tests/process/: conftest.py  test_cli_args.py  test_executable_core.py  test_install_scripts.py  test_installers_slow.py  test_makefile_parser.py  test_os_helpers.py  test_registry_ar.py  test_registry_bash.py  test_registry_chmod.py  test_registry_clang.py  test_registry_cmake.py  test_registry_common.py  test_registry_ctest.py  test_registry_curl.py  test_registry_gas.py  test_registry_gcc.py  test_registry_gprof.py  test_registry_gprofng.py  test_registry_gtest.py  test_registry_ld.py  test_registry_lld.py  test_registry_makefile.py  test_registry_nasm.py  test_registry_nm.py  test_registry_perf.py  test_registry_pytest.py  test_registry_valgrind.py
tests/test-projects/cmake-bad-project-2/: hello_world.cpp
tests/test-projects/cmake-cmp-project-1/: CMakeLists.txt
tests/test-projects/cmake-cmp-project-2/: CMakeLists.txt  echo.cpp
tickets/: T-0001-fix-frob-graph-build-crash-on-property-getter-setter-pairs-upstream-frob-bug.md  T-0002-bind-frob-tests-unit-edges-across-public-api-test001-backlog.md  T-0003-add-frob-doc-edges-for-undocumented-public-symbols-cov001-backlog.md  T-0004-add-integration-tests-for-interface-packages-test003.md
(+281 files in other folders)
