[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lograder"
version = "0.2.0"
description = "A general-purpose autograder written primarily in Python 3."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Logan Dapp", email = "logan@logand.app" }
]

dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "StrEnum>=0.4.15; python_version < '3.11'",
    "pydantic>=2.12.0",
    "ansi2html>=1.9.2",
    "colorama>=0.4.6",
    "types-colorama>=0.4.15"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "black",
    "isort"
]

[project.urls]
Homepage = "https://github.com/lognd/lograder"
Documentation = "https://github.com/lognd/lograder"
Source = "https://github.com/lognd/lograder"
Issues = "https://github.com/lognd/lograder/issues"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
calgen = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.isort]
profile = "black"
line_length = 88
py_version = 310
src_paths = ["src", "tests"]
known_first_party = ["lograder"]