[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lograder"
version = "0.3.9"
description = "A general-purpose autograder written primarily in Python 3."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Logan Dapp", email = "logan@logand.app" }
]

dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "StrEnum>=0.4.15; python_version < '3.11'",
    "pydantic>=2.12.0",
    "ansi2html>=1.9.2",
    "colorama>=0.4.6",
    "types-colorama>=0.4.15",
    "tree-sitter>=0.22",
    "tree-sitter-c>=0.21",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-python>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "ty",
    "ruff",
    # tomli is only a runtime dependency on Python < 3.11, but ty checks the
    # conditional-import fallback branch regardless of the interpreter version,
    # so it must be importable in the type-check environment on every version.
    "tomli>=2.0.0",
    # mypy is exercised by the MypyCheck integration tests; without it in the
    # test environment those tests could not run (their probe now skips
    # cleanly, but installing mypy lets them actually execute in CI).
    "mypy",
]

[project.urls]
Homepage = "https://github.com/lognd/lograder"
Documentation = "https://github.com/lognd/lograder"
Source = "https://github.com/lognd/lograder"
Issues = "https://github.com/lognd/lograder/issues"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
lograder = ["py.typed", "data/html/*", "data/install_scripts/*.sh", "output/config.toml"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ty.environment]
python-version = "3.10"
extra-paths = ["stubs"]

[tool.frob]
check_base = "master"
# ty already runs as its own gate via `make typecheck`/`make check`; its 55
# pre-existing diagnostics on this snapshot count as hard errors in
# `frob check` (unlike ruff-check/ruff-format, which only warn there) and
# would block frob's exit-0 adoption gate without a source change, which is
# out of scope for this adoption pass. Skipped here; tracked in tickets/.
check_skip_ty = true